example/lib/src/arbs/errors/app_ro.arb
{
  "@@locale": "ro",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "A apărut o eroare",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "A apărut o eroare neașteptată",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Raportul de eroare a fost trimis cu succes.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}